--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,10 +6,19 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
+        <activity android:name=".ZyqLibraryActivity"></activity>
+        <activity android:name=".ZyqTestActivity" />
+        <activity android:name=".ZyqFindPwdShowActivity" />
+        <activity android:name=".ZyqFindPwdEditActivity" />
+        <activity android:name=".ZyqFindPwdActivity" />
+        <activity android:name=".ZyqRegiste4Activity" />
+        <activity android:name=".ZyqRegister3Activity" />
+        <activity android:name=".ZyqRegister2Activity" />
+        <activity android:name=".ZyqRegister1Activity" />
+        <activity android:name=".ZyqLoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
