--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,16 @@
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ZyqLibraryActivity"></activity>
+        <activity android:name=".ZyqLaunchActivity"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:label="@string/app_name"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".ZyqLibraryActivity" />
         <activity android:name=".ZyqTestActivity" />
         <activity android:name=".ZyqFindPwdShowActivity" />
         <activity android:name=".ZyqFindPwdEditActivity" />
