--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".ZyqRegister2Activity" />
         <activity android:name=".ZyqRegister1Activity" />
         <activity android:name=".LmxRecommendActivity" />
+        <activity android:name=".LmxShowWorkActivity" />
         <activity android:name=".UserMain.drawer"/>
         <activity android:name=".ZyqLoginActivity">
             <intent-filter>
