zyq修改了测试过程中发现的bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.literaturesharing9">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <application
 
-        android:usesCleartextTraffic="true"
+    <application
         android:allowBackup="true"
         android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ZyqLaunchActivity"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".ZyqUserNumActivity"></activity>
+        <activity
+            android:name=".ZyqLaunchActivity"
             android:label="@string/app_name"
-            >
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".LmxRecommendActivity" />
@@ -32,7 +35,7 @@
         <activity android:name=".ZyqRegister3Activity" />
         <activity android:name=".ZyqRegister2Activity" />
         <activity android:name=".ZyqRegister1Activity" />
-        <activity android:name=".UserMain.drawer"/>
+        <activity android:name=".UserMain.drawer" />
         <activity android:name=".ZyqLoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
